--- a/workflow/envs/liftover.yml
+++ b/workflow/envs/liftover.yml
@@ -1,7 +1,6 @@
-name: bcftools
+name: crossmap
 channels:
   - conda-forge
   - bioconda
 dependencies:
-  - bcftools=1.20
-  - htslib=1.20
+  - Crossmap=0.7.3
