--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,7 +6,7 @@ workspace_path: 'results'
 sumstats_path: 'config/local.txt'
 metadata_file: 'data/metadata.json'
 chain_file: '/group/diangelantonio/public_data/liftOver/hg19ToHg38.over.chain.gz'
-hg37_fasta_file: '/group/diangelantonio/public_data/liftOver/human_g1k_v37.fasta'
+log: 'logfile_liftover'
 hg37_fasta_fai_file: '/group/diangelantonio/public_data/liftOver/human_g1k_v37.fasta.fai'
 hg38_fasta_file: '/group/diangelantonio/public_data/liftOver/hg38.fa'
 hg38_fasta_fai_file: '/group/diangelantonio/public_data/liftOver/hg38.fa.fai'
