--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,6 +4,7 @@ run:
 # paths
 workspace_path: 'results'
 sumstats_path: 'config/local.txt'
+uri: '~/tiledb'
 metadata_file: 'data/metadata.json'
 chain_file: '/group/diangelantonio/public_data/liftOver/hg19ToHg38.over.chain.gz'
 log: 'logfile_liftover'
