--- a/config/config_harmonize_sumstats.yml
+++ b/config/config_harmonize_sumstats.yml
@@ -8,8 +8,9 @@ run_sequence: !!omap
   - 2: 'infer_build'
   - 3: 'fill_data'
   - 4: 'harmonize'
-  - 5: 'sort_alphabetically'
-  - 6: 'write_tsv'
+  - 5: 'liftover'
+  - 6: 'sort_alphabetically'
+  - 7: 'write_tsv'
 
 
 steps:
@@ -39,10 +40,20 @@ steps:
       basic_check: False
       n_cores: *cores
   sort_alphabetically:
+    params: # see https://cloufield.github.io/gwaslab/Harmonization/
+      run: True
+    gl_params:
+      n_cores: *cores
+  liftover: # see https://cloufield.github.io/gwaslab/LiftOver/
     params:
       run: True
     gl_params:
       n_cores: *cores
+      from_build: "19"
+      to_build: "38"
+      remove: True
+
+    
   write_tsv:
     params:
       run: True
