--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,7 +4,7 @@ run:
 # paths
 workspace_path: 'results'
 input_file: 'config/example.tsv'
-uri: '~/tiledb'
+uri: 'file://~/tiledb'
 
 chain_file: '/group/diangelantonio/public_data/liftOver/hg19ToHg38.over.chain.gz'
 log: 'logfile_liftover'
