--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,6 +5,7 @@ run:
 workspace_path: 'results'
 input_file: 'config/example.tsv'
 uri: 'file://~/tiledb'
+mongo_uri: 'mongodb://localhost:27017/tiledb'
 
 chain_file: '/group/diangelantonio/public_data/liftOver/hg19ToHg38.over.chain.gz'
 log: 'logfile_liftover'
