linting and minor

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,9 +5,9 @@ run:
 workspace_path: 'results'
 input_file: 'config/example.tsv'
 uri: 'file:///~/tiledb'
-mongo_uri: 'mongodb://localhost:27017/tiledb'
-vault_auth: null
-vault_mount_point: null 
+#mongo_uri: 'mongodb://localhost:27017/tiledb'
+vault_auth: "basic"
+vault_mount_point: null
 vault_path: null
 vault_token: null
 vault_url: null
